# table-forge

./: Cargo.toml  README.md  README.org
src/: app.rs  constants.rs  db.rs  main.rs  model.rs  ui.rs  util.rs  utils.rs  widget.rs
src/app/: diagram.rs  ui.rs
src/app/ui/: sidebar.rs  toolbar.rs
src/ui/: header.rs  primary.rs  sidebar.rs
src/ui/header/: title.rs
src/ui/primary/: content.rs  header.rs
src/ui/primary/header/: title.rs
src/widget/: svg_button.rs
widget/: Cargo.toml
widget/src/: icon.rs  lib.rs  svg.rs
